DataGrid: Fix unnecessary scrollbars if the columnAutoWidth and hidingPriority options are set (T745930) (#8547)

--- a/styles/widgets/generic/gridBase.generic.less
+++ b/styles/widgets/generic/gridBase.generic.less
@@ -168,10 +168,6 @@
             & > td {
                 padding: @GENERIC_GRID_BASE_CELL_PADDING;
             }
-
-            & > td.dx-command-adaptive {
-                padding: @GENERIC_GRID_BASE_CELL_PADDING - 2px @GENERIC_GRID_BASE_CELL_PADDING;
-            }
         }
 
         .dx-@{widgetName}-content .dx-@{widgetName}-table .dx-row {
